# QuantumCore

./: CMakeLists.txt  DOCUMENTATION.txt  GuiApp.cpp  GuiApp.h  NumericalSolver.cpp  NumericalSolver.h  PROJECT_DESCRIPTION.txt  PhysicsConstants.h  QuantumCore.sln  QuantumCore.vcxproj  QuantumCore.vcxproj.filters  QuantumExport.h  QuantumParticle.cpp  QuantumParticle.h  README.md  Solver.cpp  Solver.h  animate_time.py  barrier_wavefunction.csv  box_wavefunction.csv  delta_wavefunction.csv  double_delta_wavefunction.csv  fdm_energies.csv  fdm_output.csv  finite_well_time_evolution.csv  finite_well_wavefunction.csv  main.cpp  oscillator_wavefunction.csv  parabolic_well_wavefunction.csv  plot_eigen.py  quantum_c_api.cpp  quantum_c_api.h  wavefunction.csv
data/: fdm_output.csv
